# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: check-lint.yml
brain_games/: cli.py  engine.py  even.py  game_logic.py  games_body.py  logic.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
